Solve linear gradient not covering whole body

--- a/admin/css/admin-signup-style.css
+++ b/admin/css/admin-signup-style.css
@@ -1,4 +1,6 @@
 body {
+  height: 100%;
+  background-attachment: fixed;
   margin: 0px;
   padding: 0px;
   min-height: 768px;
